Fix wrong gradient color that hides overflowing url

--- a/src/components/pills/styles.scss
+++ b/src/components/pills/styles.scss
@@ -20,7 +20,7 @@
 
     &:after {
       content: '';
-      background: linear-gradient(90deg, #fff0 10px, #fff);
+      background: linear-gradient(90deg, #fff0 10px, $light-gray5);
       position: absolute;
       right: 0;
       top: 0;
